--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-MONGO_URL=
-JWT_ADMIN_PASSWORD=
-JWT_USER_PASSWORD=
+MONGO_URL=mongodb+srv://admin:Kaushik%401519@cluster0.iod9b.mongodb.net/coursera-app
+JWT_ADMIN_PASSWORD=123123
+JWT_USER_PASSWORD=124124
